@@ -1,3 +1,4 @@
+** Keep Changelog up to date :)
 TODO
 ------------
 * Update disassembly approach
@@ -19,9 +20,6 @@ TODO
   - Deterine beginning and end
   - Cross reference info?
 * Process globals (Can be added as symbols) [PARTIAL]
-* Cases
-  - Extend format to support execution of commands
-    - Example: Write memory
 
 DONE
 -------------------
@@ -29,4 +27,7 @@ DONE
 * Save/Load SREP files (STAN Reverse Engineering Projects :)
 * Add patch command. Reload binary memory mapped and apply memory write commands
   [NOTE]... We are actually dumping a new file instead.
+* Cases
+  - Extend format to support execution of commands
+    - Example: Write memory
 
